--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+
 
   <!-- Js -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -18,6 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@400;900&family=Ubuntu&display=swap" rel="stylesheet">  <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/9faa66ff5a.js" crossorigin="anonymous"></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -36,14 +37,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -209,9 +210,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h2 class="cta-text">Find the True Love of Your Dog's Life Today.</h2>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -219,8 +220,15 @@
   <!-- Footer -->
 
   <footer id="footer">
+  <div class="sm-icons">
 
-    <p>© Copyright 2018 TinDog</p>
+
+    <i class="sm-icons fab fa-facebook-f"></i>
+    <i class="sm-icons fab fa-twitter"></i>
+    <i class="sm-icons fab fa-instagram"></i>
+    <i class="sm-icons fas fa-envelope"></i>
+  </div>
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
